--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="React Invoice Generator allows you quickly make invoices and save them as PDF"
+      content="Quickly generate invoices from us, to you, at SoFriendly."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -25,7 +25,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Nunito" />
-    <title>React Invoice Generator</title>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
